--- a/app/views/layouts/ad_landing_page.html.erb
+++ b/app/views/layouts/ad_landing_page.html.erb
@@ -29,7 +29,10 @@
           <%= yield(:right_column) %>
         </div>
       </div>
-      <%= yield(:footer) %>
+      <footer id="footer">
+        <%= yield(:footer) %>
+        <div class="copyright"><p>All Rights Reserved. Chapman University &copy; 2016</p></div>
+      </footer>
     </div>
   </div>
 </body>
