--- a/app/assets/stylesheets/widgets/_ad_landing_page/sponsor_bar.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/sponsor_bar.scss
@@ -1,12 +1,29 @@
 #sponsor-bar {
-	padding: $one-column-widget-spacing 36px;
 	background-color: white;
+	padding: 0;
+
 	.outer-container {
 		@include outer-container;
+			padding: $one-column-widget-spacing 36px;
 	}
+
+	.sponsor-title {
+		display: inline-block;
+		width: 100%;
+		background-color: $cu-light-grey;
+		padding: 0 36px;
+		
+		h2 {
+			text-align: center;
+			font-weight: 400;
+			text-transform: uppercase;
+		}
+	}
+
 	.carousel-container {
 		padding: 0 24px;
 	}
+
 	.jcarousel {
 		position: relative;
 		overflow: hidden;
@@ -34,6 +51,7 @@
 			vertical-align: middle;
 		}
 	}
+
 	.control { 
 		position: absolute;
 		top: 0;
