--- a/app/views/widgets/ad_landing_page/_sponsor_bar.html
+++ b/app/views/widgets/ad_landing_page/_sponsor_bar.html
@@ -1,4 +1,5 @@
 <div id="sponsor-bar">
+	<div class="sponsor-title"><h2>Our Alumni Work at</h2></div>
 	<div class="outer-container">
 		<div class="carousel-container">
 			<div class="jcarousel">
