sample html for image/video/text-only widgets

--- a/app/views/layouts/ad_landing_page.html.erb
+++ b/app/views/layouts/ad_landing_page.html.erb
@@ -25,7 +25,7 @@
           <h2 class="ad-landing-title"><%= yield(:title) %></h2>
           <%= yield(:left_column) %>
         </div>
-        <div id="right-column" class="ad-landing-left-column">
+        <div id="right-column" class="ad-landing-right-column">
           <%= yield(:right_column) %>
         </div>
       </div>
