--- a/app/views/widgets/ad_landing_page/_messaging_only.html
+++ b/app/views/widgets/ad_landing_page/_messaging_only.html
@@ -1,12 +1,8 @@
-<div class="messaging-widget messaging-widget__1-column messaging-widget__dark-bg">
+<div class="ad-landing-messaging-widget ad-landing-messaging-widget__text-only">
   <div class="outer-container">
     <div class="text-column">
       <div class="section-message">
-        <h2 class="title">Sample Message Background Photo</h2>
         <div class="body editableContent">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
-          </p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
           </p>
