--- a/app/views/widgets/ad_landing_page/_messaging_with_image.html
+++ b/app/views/widgets/ad_landing_page/_messaging_with_image.html
@@ -1,14 +1,12 @@
-<div class="messaging-widget messaging-widget__2-column messaging-widget__text-right messaging-widget__dark-bg">
+<div class="ad-landing-messaging-widget ad-landing-messaging-widget__image ad-landing-messaging-widget__text-left">
   <div class="outer-container">
-    <div class="media-column">
-      <span class="center-media-helper"></span><img class="media" src="http://www.critterbabies.com/wp-content/gallery/kittens/Cute-Kitten-kittens-16122946-1280-800.jpg"/>
-    </div>
     <div class="text-column">
       <div class="section-message">
-        <h2 class="title">Sample Message With Photo</h2>
+        <h3 class="title">Read what one of our graduates has to say:</h3>
         <div class="body editableContent">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
+            <img class="media" src="http://www.critterbabies.com/wp-content/gallery/kittens/Cute-Kitten-kittens-16122946-1280-800.jpg"/>
+            "I came to Chapman for reason: QUALITY. Quality in education, quality in professors, quality in career services, and quality in my fellow classmates. Chapman is constantly striving for greatness, and they have given me the resources to achieve the same throughout my hourney. Because of the intimate setting Chapman provides, students are able to take full advantage of the resources and services they offer and, most importantly, get to know the faculty, staff, and fellow classmates on a more casual level."<br /><br /><strong>Jackie Becerra, MBA '15</strong><br />Nike, Inc. Intern
           </p>
         </div>
       </div>
