quick css fixes

--- a/app/assets/stylesheets/widgets/_ad_landing_page/messaging.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/messaging.scss
@@ -60,7 +60,11 @@
   .text-column {
     text-align: left;
 
-    h2, p { padding: 0 32px; }
+    h2, p {
+      padding: 0 32px;
+
+      @include media($medium-screen) { padding: 0; }
+    }
   }
 
   .table-spacer { height: 32px; }
