implemented feature points widget

--- a/app/views/widgets/ad_landing_page/_feature_points.html
+++ b/app/views/widgets/ad_landing_page/_feature_points.html
@@ -1,3 +1,11 @@
-<div>
-
+<div class="feature-points">
+	<div class="outer-container">
+		<ul class="feature-points-list">
+			<li class="point-item"><span class="icon icon-calendar4"></span>21-moth program with daytime classes</li>
+			<li class="point-item"><span class="icon icon-leaf"></span>Fall start</li>
+			<li class="point-item"><span class="icon icon-bookmark"></span>Merit scholarships</li>
+			<li class="point-item"><span class="icon icon-earth"></span>Optional international travel courses</li>
+			<li class="point-item"><span class="icon icon-library2"></span>Concentrations in Finance and Marketing</li>
+		</ul>
+	</div>
 </div>
