--- a/app/views/widgets/ad_landing_page/_excerpt.html
+++ b/app/views/widgets/ad_landing_page/_excerpt.html
@@ -1,3 +1,7 @@
-<div>
-
+<div class="excerpt">
+	<div class="outer-container">
+		<div class=" text-container">
+			<h3 class="text">Lorem ipsum dolor sit  amet, consectetur adipiscing elit. Mauri</h3>
+		</div>
+	</div>
 </div>
