added registered trademark symbol to footer

--- a/app/views/layouts/ad_landing_page.html.erb
+++ b/app/views/layouts/ad_landing_page.html.erb
@@ -31,7 +31,7 @@
       </div>
       <footer id="footer">
         <%= yield(:footer) %>
-        <div class="copyright"><p>All Rights Reserved. Chapman University &copy; 2016</p></div>
+        <div class="copyright"><p>All Rights Reserved. Chapman University &reg; 2016</p></div>
       </footer>
     </div>
   </div>
