--- a/app/assets/stylesheets/layouts/ad_landing_page.scss
+++ b/app/assets/stylesheets/layouts/ad_landing_page.scss
@@ -28,12 +28,12 @@
   }
 
   #footer {
-    padding: 50px 0 36px;
+    padding: 16px 0;
 
-    @include media($medium-screen) { padding-top: 84px; }
+    @include media($medium-screen) { padding-top: 48px; }
 
     .copyright {
-      padding: 82px 36px 0px;
+      padding: 72px 36px 0px;
       text-align: center;
 
       p {
