--- a/app/assets/stylesheets/widgets/_ad_landing_page/feature_points.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/feature_points.scss
@@ -1,9 +1,9 @@
 .feature-points {
 	.outer-container {
 		@include outer-container;
-		padding: 0 32px 32px;
+		padding: 0 24px $base-spacing*2;
 
-		@include media($medium-screen) { padding: 0 0 32px; }
+		@include media($medium-screen) { padding: 0 0 $base-spacing*2; }
 	}
 
 	.feature-points-list {
