--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
@@ -37,7 +37,7 @@
         position: relative;
         z-index: 667;
         background-color: white;
-        padding: 24px;
+        padding: 24px 32px;
       }
     }
     
@@ -53,6 +53,7 @@
         display: table-cell;
         text-align: right;
         font-size: 16px;
+        padding-right: 8px;
         vertical-align: middle;
         margin: 0;
       }
@@ -107,7 +108,7 @@
   .masthead-content {
     @include outer-container;
     position: relative;
-    padding: $one-column-widget-spacing/2 $primary-column-widget-spacing;
+    padding: 24px;
     background-color: white;
 
     @include media($medium-screen) {
@@ -117,6 +118,10 @@
       pointer-events: none;
       z-index: 666;
     }
+
+    @include media($large-screen) {
+      margin-right: 32px;
+    }
   }
 
   // The side panel
@@ -124,7 +129,7 @@
     background-color: white;
     
     @include media($medium-screen) {
-      @include span-columns(6);
+      @include span-columns(8);
       float: right;
       padding: $one-column-widget-spacing/2 $one-column-widget-spacing/2 $one-column-widget-spacing $one-column-widget-spacing/2;
       pointer-events: all;
@@ -171,14 +176,12 @@
   article {
     color: white;
     pointer-events: all;
-    padding: 35px 20px;
     position: relative;
-    padding: $base-spacing*2;
+    padding: 24px;
     z-index: 667;
 
     @include media($medium-screen) {
-      @include span-columns(8);
-      padding: $base-spacing*2 $base-spacing;
+      @include span-columns(9);
       margin-bottom: $base-spacing*6;
       bottom: 0;
       position: absolute;
