--- a/app/views/widgets/ad_landing_page/_masthead.html
+++ b/app/views/widgets/ad_landing_page/_masthead.html
@@ -27,7 +27,7 @@
         Fill out the simple form below to request information on the Chapman MBA.
       </p>
 
-      <nav class="calls-to-action">
+      <form class="calls-to-action">
         <label for="first-name">First Name</label>
         <input type="text" name="first-name" id="first-name"><br>
         <label for="last-name">Last Name</label>
@@ -39,7 +39,7 @@
         <label for="hear-of-us">How did you hear about us?</label>
         <input type="text" name="hear-of-us" id="hear-of-us"><br>
         <input type="submit" value="Request Info Now">
-      </nav>
+      </form>
       <div id="form_211afdcd-26ad-4084-8b41-349d8d55f09a">Loading...</div><script>/*<![CDATA[*/var script = document.createElement('script'); script.src = 'https://myuniversity.edu/register/?id=211afdcd-26ad-4084-8b41-349d8d55f09a&output=embed&div=form_211afdcd-26ad-4084-8b41-349d8d55f09a&form_sys:program=Chemistry' + ((location.search.length > 1) ? '&' + location.search.substring(1) : ''); var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(script, s);/*]]>*/</script>
     </section>
   </div>
