landing page font fixes

--- a/app/assets/stylesheets/layouts/ad_landing_page.scss
+++ b/app/assets/stylesheets/layouts/ad_landing_page.scss
@@ -20,7 +20,8 @@
 
     .ad-landing-title {
       padding: 0 24px;
-      font-size: 32px;
+      font-size: 30px;
+      line-height: 38px;
 
       @include media($medium-screen) {
         margin-top: 0;
