--- a/app/assets/stylesheets/widgets/_ad_landing_page/excerpt.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/excerpt.scss
@@ -16,7 +16,8 @@
 		margin: 0;
 		text-align: center;
 		font-size: 26px;
-		font-weight: 600;
+		line-height: 40px;
+		font-weight: 800;
 		color: #828282;
 
 		@include media($large-screen) { text-align: left; }
