--- a/app/assets/stylesheets/widgets/_ad_landing_page/feature_points.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/feature_points.scss
@@ -13,7 +13,14 @@
 
 	.point-item {
 		display: table;
+		font-size: 16px;
+		line-height: 24px;
 		font-weight: 600;
+
+		@include media($large-screen) {
+			font-size: 18px;
+			line-height: 28px;
+		}
 	}
 
 	.item-wrap {
