--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
@@ -2,6 +2,10 @@
   position: relative;
   background-color: #eaeaea;
 
+  .title, .subtitle, .header-text-desktop {
+    font-family: 'futura-pt', Sans-Serif;
+  }
+
   + div {
     padding-top: 0;
     @include media($medium-screen) {
@@ -38,6 +42,8 @@
         z-index: 667;
         background-color: white;
         padding: 24px 32px;
+        font-size: 20px;
+        line-height: 24px;
       }
     }
     
@@ -53,6 +59,7 @@
         display: table-cell;
         text-align: right;
         font-size: 16px;
+        text-transform: uppercase;
         padding-right: 8px;
         vertical-align: middle;
         margin: 0;
@@ -138,18 +145,8 @@
     h2 {
       font-weight: 800;
       margin: $base-spacing/2 0;
-      font-size: 20px;
+      font-size: 24px;
       line-height: 30px;
-
-      @include media($medium-screen) {
-        font-size: 22px;
-        line-height: 32px;
-      }
-
-      @include media($large-screen) {
-        font-size: 24px;
-        line-height: 34px;
-      }
     }
 
     p { line-height: 24px; }
@@ -167,7 +164,10 @@
         margin-bottom: 16px;
         width: 100%;
 
-        &[type="submit"] { border-radius: 3px; }
+        &[type="submit"] {
+          font-weight: 800; 
+          border-radius: 3px; 
+        }
       }
     }
   }
@@ -221,25 +221,40 @@
       }
     }
     
-    .title { 
+    .title {
       margin: 0;
+      font-size: 24px;
+      line-height: 34px;
+      font-weight: 800;
+      text-transform: uppercase;
 
       @include media($large-screen) {
-        font-size: 36px;
+        font-size: 30px;
+        line-height: 42px;
+      }
+
+      @include media($large-screen) {
+        font-size: 40px;
+        line-height: 52px;
       }
     }
     
     .subtitle { 
-      margin-top: $base-spacing;
-      font-weight: 400;
+      margin-top: 0;
+      font-size: 20px;
+      line-height: 28px;
+      font-weight: 200;
 
       @include media($medium-screen) {
         @include span-columns(12);
+        font-size: 24px;
+        font-weight: 34px;
       }
 
       @include media($large-screen) {
         margin-top: 0;
-        font-size: 24px;
+        font-size: 32px;
+        line-height: 42px;
       }
     }
 
