--- a/app/assets/stylesheets/widgets/_ad_landing_page/messaging.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/messaging.scss
@@ -20,8 +20,9 @@
   }
 
   .title {
-    font-size: 22px;
-    line-height: 26px;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 600;
   }
 
   .center-media-helper {
@@ -43,11 +44,22 @@
   }
 }
 
+.section-message .body p {
+  font-size: 16px;
+  line-height: 24px;
+}
+
 /* Text Only Variation */
 .ad-landing-messaging-widget__text-only {
   .section-message .body p {
+    font-size: 16px;
+    line-height: 36px;
     font-weight: 800;
-    line-height: 28px;
+
+    @include media($large-screen) {
+      font-size: 18px;
+      line-height: 40px;
+    }
   }
 }
 
@@ -61,7 +73,7 @@
     text-align: left;
 
     h2, p {
-      padding: 0 32px;
+      padding: 0 24px;
 
       @include media($medium-screen) { padding: 0; }
     }
