--- a/app/assets/stylesheets/widgets/_ad_landing_page/sponsor_bar.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/sponsor_bar.scss
@@ -15,8 +15,15 @@
 		
 		h2 {
 			text-align: center;
+			font-size: 20px;
+			font-weight: 30px;
 			font-weight: 400;
 			text-transform: uppercase;
+
+			@include media($medium-screen) {
+				font-size: 26px;
+				font-weight: 30px;
+			}
 		}
 	}
 
