--- a/app/views/widgets/ad_landing_page/_masthead.html
+++ b/app/views/widgets/ad_landing_page/_masthead.html
@@ -25,7 +25,14 @@
       <h2>Take the first step to advance your career.</h2>
 
       <div class="calls-to-action">
-        <div id="form_a4517720-e7d7-4e0e-bafd-2c1045918e0d">Loading...</div><script>/*<![CDATA[*/var script = document.createElement('script'); script.async = 1; script.src = 'https://go.chapman.edu/register/?id=a4517720-e7d7-4e0e-bafd-2c1045918e0d&output=embed&div=form_a4517720-e7d7-4e0e-bafd-2c1045918e0d' + ((location.search.length > 1) ? '&' + location.search.substring(1) : ''); var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(script, s);/*]]>*/</script>
+        <div id="form_a4517720-e7d7-4e0e-bafd-2c1045918e0d">Loading...</div>
+        <script>/*<![CDATA[*/
+          var script = document.createElement('script');
+          script.async = 1;
+          script.src = 'https://go.chapman.edu/register/?id=a4517720-e7d7-4e0e-bafd-2c1045918e0d&output=embed&div=form_a4517720-e7d7-4e0e-bafd-2c1045918e0d' + ((location.search.length > 1) ? '&' + location.search.substring(1) : '');
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(script, s);
+        /*]]>*/</script>
       </div>
     </section>
   </div>
