reordered schools and colleges by core name

--- a/app/views/widgets/shared/_omninav.html
+++ b/app/views/widgets/shared/_omninav.html
@@ -250,26 +250,16 @@
                         <span>+</span>
                     </span>
                     <ul>
-                        <li><a href="/business/index.aspx" title="Argyros School of Business &amp; Economics">Argyros School of Business &amp; Economics</a>
-                        </li>
-                        <li><a href="/ces/index.aspx" title="College of Educational Studies">College of Educational Studies</a>
-                        </li>
-                        <li><a href="/copa/index.aspx" title="College of Performing Arts">College of Performing Arts</a>
-                        </li>
-                        <li><a href="/crean/index.aspx" title="Crean College of Health &amp; Behavioral Sciences">Crean College of Health &amp; Behavioral Sciences</a>
-                        </li>
-                        <li><a href="/dodge/index.aspx" title="Dodge College of Film &amp; Media Arts">Dodge College of Film &amp; Media Arts</a>
-                        </li>
-                        <li><a href="/law/index.aspx" title="Fowler School of Law">Fowler School of Law</a>
-                        </li>
-                        <li><a href="/scst/index.aspx" title="Schmid College of Science &amp; Technology">Schmid College of Science &amp; Technology</a>
-                        </li>
-                        <li><a href="/communication/index.aspx" title="School of Communication">School of Communication</a>
-                        </li>
-                        <li><a href="/pharmacy/index.aspx" title="School of Pharmacy">School of Pharmacy</a>
-                        </li>
-                        <li><a href="/wilkinson/index.aspx" title="Wilkinson College of Arts, Humanities, &amp; Social Sciences">Wilkinson College of Arts, Humanities, &amp; Social Sciences</a>
-                        </li>
+                      <li><a href="/business/index.aspx" title="Argyros School of Business &amp; Economics">Argyros School of Business &amp; Economics</a></li>
+                      <li><a href="/crean/index.aspx" title="Crean College of Health &amp; Behavioral Sciences">Crean College of Health &amp; Behavioral Sciences</a></li>
+                      <li><a href="/dodge/index.aspx" title="Dodge College of Film &amp; Media Arts">Dodge College of Film &amp; Media Arts</a></li>
+                      <li><a href="/scst/index.aspx" title="Schmid College of Science &amp; Technology">Schmid College of Science &amp; Technology</a></li>
+                      <li><a href="/wilkinson/index.aspx" title="Wilkinson College of Arts, Humanities, &amp; Social Sciences">Wilkinson College of Arts, Humanities, &amp; Social Sciences</a></li>
+                      <li><a href="/communication/index.aspx" title="School of Communication">School of Communication</a></li>
+                      <li><a href="/ces/index.aspx" title="College of Educational Studies">College of Educational Studies</a></li>
+                      <li><a href="/copa/index.aspx" title="College of Performing Arts">College of Performing Arts</a></li>
+                      <li><a href="/law/index.aspx" title="Fowler School of Law">Fowler School of Law</a></li>
+                      <li><a href="/pharmacy/index.aspx" title="School of Pharmacy">School of Pharmacy</a></li>
                     </ul>
                 </li>
                 
@@ -291,44 +281,44 @@
                     <span class="toggle">
                         <span>+</span>
                     </span>
-                    <ul>
-                      <li>
-                        <a href="https://blogs.chapman.edu/happenings/" title="Happenings">Happenings</a>
-                      </li>
-                      <li>
-                        <a href="https://blogs.chapman.edu/business/" title="Argyros School of Business &amp; Economics">Argyros School of Business &amp; Economics</a>
-                      </li>
-                      <li>
-                        <a href="https://blogs.chapman.edu/alumni/" title="Chapman Alumni">Chapman Alumni</a>
-                      </li>
-                      <li>
-                        <a href="https://blogs.chapman.edu/ces/" title="College of Educational Studies">College of Educational Studies</a>
-                      </li>
-                      <li>
-                        <a href="https://blogs.chapman.edu/copa/" title="College of Performing Arts">College of Performing Arts</a>
-                      </li>
-                      <li>
-                        <a href="https://blogs.chapman.edu/crean/" title="Crean College of Health and Behavioral Sciences">Crean College of Health and Behavioral Sciences</a>
-                      </li>
-                      <li>
-                        <a href="https://blogs.chapman.edu/dodge/" title="Dodge College of Film and Media Arts">Dodge College of Film and Media Arts</a>
-                      </li>
-                      <li>
-                        <a href="https://blogs.chapman.edu/law/" title="Fowler School of Law">Fowler School of Law</a>
-                      </li>
-                      <li>
-                        <a href="https://blogs.chapman.edu/scst/" title="Schmid College of Science and Technology">Schmid College of Science and Technology</a>
-                      </li>
-                      <li>
-                        <a href="https://blogs.chapman.edu/pharmacy/" title="School of Pharmacy">School of Pharmacy</a>
-                      </li>
-                      <li>
-                        <a href="https://blogs.chapman.edu/wilkinson/" title="Wilkinson College of Arts, Humanities, and Social Sciences">Wilkinson College of Arts, Humanities, and Social Sciences</a>
-                      </li>
-                      <li>
-                          <a href="https://blogs.chapman.edu/" title="View more Blogs">View More Blogs</a>
-                      </li>
-                    </ul>
+                      <ul>
+                        <li>
+                          <a href="https://blogs.chapman.edu/happenings/" title="Happenings">Happenings</a>
+                        </li>
+                        <li>
+                          <a href="https://blogs.chapman.edu/business/" title="Argyros School of Business &amp; Economics">Argyros School of Business &amp; Economics</a>
+                        </li>
+                        <li>
+                          <a href="https://blogs.chapman.edu/alumni/" title="Chapman Alumni">Chapman Alumni</a>
+                        </li>
+                        <li>
+                          <a href="https://blogs.chapman.edu/ces/" title="College of Educational Studies">College of Educational Studies</a>
+                        </li>
+                        <li>
+                          <a href="https://blogs.chapman.edu/copa/" title="College of Performing Arts">College of Performing Arts</a>
+                        </li>
+                        <li>
+                          <a href="https://blogs.chapman.edu/crean/" title="Crean College of Health and Behavioral Sciences">Crean College of Health and Behavioral Sciences</a>
+                        </li>
+                        <li>
+                          <a href="https://blogs.chapman.edu/dodge/" title="Dodge College of Film and Media Arts">Dodge College of Film and Media Arts</a>
+                        </li>
+                        <li>
+                          <a href="https://blogs.chapman.edu/law/" title="Fowler School of Law">Fowler School of Law</a>
+                        </li>
+                        <li>
+                          <a href="https://blogs.chapman.edu/scst/" title="Schmid College of Science and Technology">Schmid College of Science and Technology</a>
+                        </li>
+                        <li>
+                          <a href="https://blogs.chapman.edu/pharmacy/" title="School of Pharmacy">School of Pharmacy</a>
+                        </li>
+                        <li>
+                          <a href="https://blogs.chapman.edu/wilkinson/" title="Wilkinson College of Arts, Humanities, and Social Sciences">Wilkinson College of Arts, Humanities, and Social Sciences</a>
+                        </li>
+                        <li>
+                            <a href="https://blogs.chapman.edu/" title="View more Blogs">View More Blogs</a>
+                        </li>
+                      </ul>
                 </li>
                 <li>
                     <a class="has-icon" href="https://inside.chapman.edu/" title="Inside Chapman">
