--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
@@ -44,12 +44,13 @@
         padding: 24px 32px;
         font-size: 20px;
         line-height: 24px;
+        border-bottom:1px solid #d8d8d8;
       }
     }
     
     .header-logo-desktop {
-      width: 50%;
       display: table-cell;
+      height:35px;
     }
 
     .header-text-desktop {
@@ -159,9 +160,16 @@
       margin-top: $base-spacing;
       color: #767676;
 
+      .form_p .form_label {
+        font-weight: normal;
+        color: #2f2f2f;
+        font-size: 16px;
+        line-height: 24px;
+      }
+
       input, select {
         border-radius: 0;
-        margin-bottom: 16px;
+        margin-bottom: 5px;
         width: 100%;
       }
 
@@ -298,10 +306,13 @@
     }
 
     .footer-text-desktop {
-      line-height: 0.7em;
-      font-size: 130px;
-      margin: 0 -5%;
+      font-family: 'futura-pt';
+      font-weight: 800;
+      line-height: 0.65em;
+      font-size: 135px;
+      margin: 0 -4%;
       white-space: nowrap;
+      color:rgba(255, 255, 255, 0.04);
     }
   }
 }
