--- a/app/views/widgets/ad_landing_page/_masthead.html
+++ b/app/views/widgets/ad_landing_page/_masthead.html
@@ -13,7 +13,7 @@
       <article style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
         <div class="inner-background-overlay"></div>
         <div class="content">
-          <h1 class="title">TURN YOUR PASSION, KNOWLEDGE AND EXPERIENCE INTO A REWARDING CAREER</h1>
+          <h1 class="title">Turn your passion, knowledge and experience into a rewarding career.</h1>
           <h2 class="subtitle">Earn your Masters Degree at Dodge College of Film and Media Arts.</h2>
         </div>
       </article>
@@ -25,14 +25,7 @@
       <h2>Take the first step to advance your career.</h2>
 
       <div class="calls-to-action">
-        <div id="form_a4517720-e7d7-4e0e-bafd-2c1045918e0d">Loading...</div>
-        <script>/*<![CDATA[*/
-          var script = document.createElement('script');
-          script.async = 1;
-          script.src = 'https://go.chapman.edu/register/?id=a4517720-e7d7-4e0e-bafd-2c1045918e0d&output=embed&div=form_a4517720-e7d7-4e0e-bafd-2c1045918e0d' + ((location.search.length > 1) ? '&' + location.search.substring(1) : '');
-          var s = document.getElementsByTagName('script')[0];
-          s.parentNode.insertBefore(script, s);
-        /*]]>*/</script>
+        <div id="form_4c37abdc-d5ba-4313-99b6-89b7a869ac37">Loading...</div><script async="async" src="https://go.chapman.edu/register/?id=4c37abdc-d5ba-4313-99b6-89b7a869ac37&amp;output=embed&amp;div=form_4c37abdc-d5ba-4313-99b6-89b7a869ac37">/**/</script>
       </div>
     </section>
   </div>
