--- a/app/views/widgets/ad_landing_page/_messaging_only.html
+++ b/app/views/widgets/ad_landing_page/_messaging_only.html
@@ -8,7 +8,7 @@
           </p>
           <ul>
             <li>Lorem ipsum dolor sit amet</li>
-            <li>consectetur adipiscing elit</li>
+            <li>Consectetur adipiscing elit</li>
           </ul>
         </div>
       </div>
