Corrected style syntax from font-weight to line-height, and updated include media.

--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
@@ -253,7 +253,7 @@
       font-weight: 800;
       text-transform: uppercase;
 
-      @include media($large-screen) {
+      @include media($medium-screen) {
         font-size: 30px;
         line-height: 42px;
       }
@@ -271,9 +271,9 @@
       font-weight: 200;
       
       @include media($medium-screen) {
-        @include span-columns(12);
+        /*@include span-columns(12);*/
         font-size: 24px;
-        font-weight: 34px;
+        line-height: 34px;
       }
 
       @include media($large-screen) {
