Added support for h2s as headings in footer, fixed flexslider accessibility issues

--- a/app/assets/stylesheets/layout_old/footer.scss
+++ b/app/assets/stylesheets/layout_old/footer.scss
@@ -327,7 +327,8 @@
       margin-top: 0;
     }
   }
-  > h3 {
+  > h2,
+    h3 {
     /*font-family: "proxima-nova-soft", "proxima-nova-soft-n4", sans-serif;*/
     font-family: 'proxima-nova', sans-serif;
     font-style: normal;
@@ -364,6 +365,7 @@
     }
   }
   &.is-visible {
+    > h2:after,
     > h3:after {
       background-position: -23px -29px;
     }
