--- a/app/assets/stylesheets/layout_old/phase4_masthead.scss
+++ b/app/assets/stylesheets/layout_old/phase4_masthead.scss
@@ -133,6 +133,11 @@
     list-style: none;
     float: left;
     overflow: hidden;
+
+    .no-js & {
+        margin: 0 15px 0 0; // Prevents 4th item from overflowing to next line
+    }
+
 }
 /*
 @media only screen and (min-width: 768px){
