Added support for h2 toggles in footer

--- a/app/assets/stylesheets/layout_old/footer.scss
+++ b/app/assets/stylesheets/layout_old/footer.scss
@@ -336,6 +336,7 @@
     padding: 20px;
     margin: 0;
     cursor: pointer;
+    line-height: 1.4em;
     &:after {
       background-image: image-url('miscButtons.png');
       background-position: -23px 0;
