--- a/app/assets/stylesheets/widgets/news-events-feed.scss
+++ b/app/assets/stylesheets/widgets/news-events-feed.scss
@@ -45,6 +45,7 @@ $tab-content-border-color: #c1c1c1;
   }
   .no-js-link {
     display: none;
+    padding-left: 10px !important;
     .no-js & {
       display: block;
     }
