added more slides to slider and updated images

--- a/app/views/widgets/masthead/_slider_1.html
+++ b/app/views/widgets/masthead/_slider_1.html
@@ -7,12 +7,20 @@
             <div class="flexslider">
                 <ul class="slides">
                     <li class="slide">
-                        <div class="masthead-new quote"><img alt="Ruby on Rails" src="<%= image_path 'placeholder/ruby_landing.jpeg' %>" />
-                            <div class="caption align-bottom-left">
-                                <p class="subTitle">Web development that doesn't hurt</p><a href="http://rubyonrails.org///"><h2>Ruby on Rails&#160;»</h2></a>
-                                <p>It is designed to make programming web applications easier by making assumptions about what every developer needs to get started.</p><span class="author">James Kerr</span>
-                            </div>
+                      <div class="masthead-new quote"><img alt="Ruby on Rails" src="<%= image_path 'placeholder/attallah_plazza.jpg' %>" />
+                        <div class="caption align-bottom-left">
+                          <p class="subTitle">subtitle</p><a href="http://rubyonrails.org///"><h2>Main Title</h2></a>
+                          <p>Here is some supporting text</p><span class="author">Author</span>
                         </div>
+                      </div>
+                    </li>
+                    <li class="slide">
+                      <div class="masthead-new quote"><img alt="Ruby on Rails" src="<%= image_path 'placeholder/attallah_plazza.jpg' %>" />
+                        <div class="caption align-bottom-left">
+                          <p class="subTitle">subtitle</p><a href="http://rubyonrails.org///"><h2>Main Title</h2></a>
+                          <p>Here is some supporting text</p><span class="author">Author</span>
+                        </div>
+                      </div>
                     </li>
                 </ul>
             </div>
